feat: header + 1st section is done

--- a/index.html
+++ b/index.html
@@ -1,17 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Repair Design Project</title>
+  <link href="https://fonts.googleapis.com/css?family=Yeseva+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./scss/main.css">
 </head>
-<body>
-  <diV class="body-inner"> 
-    <header class="header">
 
+<body>
+  <div class="body-inner">
+    <header class="header">
+      <div class="aside">
+        <p>instagramm</p>
+      </div>
+      <div class="header__wrap">
+        <div class="header__menu-wrap">
+          <div class="menu">
+            <p class="logo-txt">IC "Repair Design Project"</p>
+            <nav class="menu-wrap">
+              <ul class="menu-item">
+                <li><a href="#">home</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">measurment</a></li>
+                <li><a href="#">team</a></li>
+                <li><a href="#">reviews</a></li>
+                <li><a href="#">contacts</a></li>
+              </ul>
+            </nav>
+            <a class="contact-phone" href="tel:+7(928)768-32-39">+7 (928) 768-32-39</a>
+            <button class="menu-btn" type="button"><a href="#">Request a call</a></button>
+          </div>
+        </div>
+        <div class="header__content">
+          <div class="header__text-wrap">
+            <h1>Turnkey Repair in the<br>city of <span>Rostov-on-Don</span></h1>
+            <p>Get ready-made turnkey repairs on time<br> with work time saving up to 45 days and 20% from<br> cost of
+              materials
+              due to the organization of work
+            </p>
+          </div>
+          <div class="header__btns-wrap">
+            <button class="header__btn-left" type="button"><a href="#">CALCULATE THE COST</a></button>
+            <button class="header__btn-right" type="button"><a href="#">SUBMIT YOUR APPLICATION</a></button>
+          </div>
+        </div>
+      </div>
     </header>
-  </diV>
+    <main>
+      <section class="projects">
+        <div class="projects-wrapper">
+          <div class="projects__main-block">
+            <div class="projects__txt">
+              <h2>Completed<br><span>projects</span></h2>
+              <p>Only a small part of the work performed by our company is presented on the
+                site.
+                For 14 years on in the construction market we have made happy more than 1000 families
+              </p>
+            </div>
+            <div class="projects__slider">
+              <ul class="projects__units">
+                <li class="projects__units-1 projects__units-1_active">Rostov-on-Don, Admiral</li>
+                <li class="projects__units-2">Sochi Thieves</li>
+                <li class="projects__units-3">Rostov-on-Don Patriotic</li>
+              </ul>
+              <ul class="projects__slider-img">
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-2"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+              </ul>
+            </div>
+          </div>
+          <div class="projects__addition-info">
+            <div class="projects__points-wrap">
+              <div class="projects__point">
+                <p>City:</p>
+                <p>Rostov-on-Don<br>LCD admiral</p>
+              </div>
+              <div class="projects__point">
+                <p>apartment area:</p>
+                <p>81 m2</p>
+              </div>
+              <div class="projects__point">
+                <p>Repair time:</p>
+                <p>3.5 months</p>
+              </div>
+              <div class="projects__point">
+                <p>Repair Cost:</p>
+                <p>Upon request</p>
+              </div>
+            </div>
+            <div class="projects__control-wrap">
+              <div class="projects__control-left-arrow"></div>
+              <div class="projects__control-dot"></div>
+              <div class="projects__control-dot"></div>
+              <div class="projects__control-dot"></div>
+              <div class="projects__control-right-arrow"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+    </main>
+  </div>
 </body>
+
 </html>
