feat: add section 'online control'

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
                 <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
               </ul>
+              <div class="projects__slider-btn-next"></div>
             </div>
           </div>
           <div class="projects__addition-info">
@@ -100,7 +101,7 @@
             </div>
             <div class="projects__control-wrap">
               <div class="projects__control-left-arrow"></div>
-              <div class="projects__control-dot"></div>
+              <div class="projects__control-dot projects__control-dot_active"></div>
               <div class="projects__control-dot"></div>
               <div class="projects__control-dot"></div>
               <div class="projects__control-right-arrow"></div>
@@ -108,7 +109,42 @@
           </div>
         </div>
       </section>
+      <section class="on-control">
+        <div class="on-control__title">
+          <h2>online control</h2>
+          <div class="on-control__title-icon"></div>
+        </div>
+        <div class="on-control__video">
+          <video poster="./assets/img/iframe-img.png"></video>
+          <div class="on-control__video-overlay"></div>
+          <div class="btn-play">
+            <div></div>
+          </div>
+        </div>
+        <p class="on-control__txt">
+          At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you
+          can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast
+          from one of our facilities! Leave a request below and you will receive a link to the broadcast.
+        </p>
+        <form class="form">
+          <div class="form__flex-box">
+            <fieldset>
+              <label for="name">Name</label>
+              <input type="text" id="name" value="What is your name:">
+            </fieldset>
+            <fieldset>
+              <label for="phone">Phone</label>
+              <input type="text" id="phone" value="Your phone number:">
+            </fieldset>
+            <button type="submit">Submit</button>
+          </div>
+          <fieldset class="form__checkbox">
+            <input type="checkbox" id="agree" checked>
+            <label for="agree">I agree to the processing of personal data</label>
+          </fieldset>
 
+        </form>
+      </section>
     </main>
   </div>
 </body>
