feat: add new section 'types of repair'

--- a/index.html
+++ b/index.html
@@ -54,103 +54,199 @@
       </div>
     </section>
     <main>
-      <section class="projects">
-        <div class="projects-wrapper">
-          <div class="projects__main-block">
-            <div class="projects__txt">
-              <h2>Completed<br><span>projects</span></h2>
-              <p>Only a small part of the work performed by our company is presented on the
-                site.
-                For 14 years on in the construction market we have made happy more than 1000 families
-              </p>
+      <div class="section-wrapper_projects">
+        <section class="section-wrapper">
+          <div class="projects-wrapper">
+            <div class="projects__main-block">
+              <div class="projects__txt">
+                <h2>Completed<br><span>projects</span></h2>
+                <p>Only a small part of the work performed by our company is presented on the
+                  site.
+                  For 14 years on in the construction market we have made happy more than 1000 families
+                </p>
+              </div>
+              <div class="projects__slider">
+                <ul class="projects__units">
+                  <li class="projects__units-1 projects__units-1_active">Rostov-on-Don, Admiral</li>
+                  <li class="projects__units-2">Sochi Thieves</li>
+                  <li class="projects__units-3">Rostov-on-Don Patriotic</li>
+                </ul>
+                <ul class="projects__slider-img">
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-2"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                  <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
+                </ul>
+                <div class="projects__slider-btn-next"></div>
+              </div>
             </div>
-            <div class="projects__slider">
-              <ul class="projects__units">
-                <li class="projects__units-1 projects__units-1_active">Rostov-on-Don, Admiral</li>
-                <li class="projects__units-2">Sochi Thieves</li>
-                <li class="projects__units-3">Rostov-on-Don Patriotic</li>
-              </ul>
-              <ul class="projects__slider-img">
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-1"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-2"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-                <li><img src="../repair-design-project/assets/img/slider-img-1.png" alt="image-3"></li>
-              </ul>
-              <div class="projects__slider-btn-next"></div>
+            <div class="projects__addition-info">
+              <div class="projects__points-wrap">
+                <div class="projects__point">
+                  <p>City:</p>
+                  <p>Rostov-on-Don<br>LCD admiral</p>
+                </div>
+                <div class="projects__point">
+                  <p>apartment area:</p>
+                  <p>81 m2</p>
+                </div>
+                <div class="projects__point">
+                  <p>Repair time:</p>
+                  <p>3.5 months</p>
+                </div>
+                <div class="projects__point">
+                  <p>Repair Cost:</p>
+                  <p>Upon request</p>
+                </div>
+              </div>
+              <div class="projects__control-wrap">
+                <div class="projects__control-left-arrow"></div>
+                <div class="projects__control-dot projects__control-dot_active"></div>
+                <div class="projects__control-dot"></div>
+                <div class="projects__control-dot"></div>
+                <div class="projects__control-right-arrow"></div>
+              </div>
             </div>
           </div>
-          <div class="projects__addition-info">
-            <div class="projects__points-wrap">
-              <div class="projects__point">
-                <p>City:</p>
-                <p>Rostov-on-Don<br>LCD admiral</p>
-              </div>
-              <div class="projects__point">
-                <p>apartment area:</p>
-                <p>81 m2</p>
-              </div>
-              <div class="projects__point">
-                <p>Repair time:</p>
-                <p>3.5 months</p>
-              </div>
-              <div class="projects__point">
-                <p>Repair Cost:</p>
-                <p>Upon request</p>
-              </div>
-            </div>
-            <div class="projects__control-wrap">
-              <div class="projects__control-left-arrow"></div>
-              <div class="projects__control-dot projects__control-dot_active"></div>
-              <div class="projects__control-dot"></div>
-              <div class="projects__control-dot"></div>
-              <div class="projects__control-right-arrow"></div>
+        </section>
+      </div>
+      <div class="shift-section-on-control">
+        <section class="on-control">
+          <div class="on-control__title">
+            <h2>online control</h2>
+            <div class="section__title-icon"></div>
+          </div>
+          <div class="on-control__video">
+            <iframe src="https://www.youtube.com/embed/FEmNHefGbvA" frameborder="0"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+            <div class="on-control__video-overlay"></div>
+            <div class="btn-play">
+              <div></div>
             </div>
           </div>
-        </div>
-      </section>
-      <section class="on-control">
-        <div class="on-control__title">
-          <h2>online control</h2>
-          <div class="on-control__title-icon"></div>
-        </div>
-        <div class="on-control__video">
-          <iframe src="https://www.youtube.com/embed/FEmNHefGbvA" frameborder="0"
-            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
-          <div class="on-control__video-overlay"></div>
-          <div class="btn-play">
-            <div></div>
-          </div>
-        </div>
-        <p class="on-control__txt">
-          At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you
-          can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast
-          from one of our facilities! Leave a request below and you will receive a link to the broadcast.
-        </p>
-        <form class="form">
-          <div class="form__flex-box">
-            <fieldset class="form__main-group">
-              <label for="name">Name</label>
-              <input type="text" id="name" placeholder="What is your name:">
+          <p class="on-control__txt">
+            At each facility, a camera is installed that broadcasts the progress of work on the clock. At any time, you
+            can go to our website and monitor the progress of work in your apartment. You can watch the live broadcast
+            from one of our facilities! Leave a request below and you will receive a link to the broadcast.
+          </p>
+          <form class="form__on-control">
+            <div class="form__display">
+              <fieldset class="form__main-group">
+                <label for="name">Name</label>
+                <input type="text" id="name" placeholder="What is your name:">
+              </fieldset>
+              <fieldset class="form__main-group">
+                <label for="phone">Phone</label>
+                <input type="number" id="phone" placeholder="Your phone number:">
+              </fieldset>
+              <button type="submit">Submit</button>
+            </div>
+            <fieldset class="form__checkbox">
+              <label class="form__checkbox-label" for="agree">
+                <input type="checkbox" id="agree" checked required>
+                <span class="form__checkmark"></span>
+                I agree to the processing of personal data
+              </label>
             </fieldset>
-            <fieldset class="form__main-group">
-              <label for="phone">Phone</label>
-              <input type="number" id="phone" placeholder="Your phone number:">
-            </fieldset>
-            <button type="submit">Submit</button>
+          </form>
+        </section>
+      </div>
+      <section class="types-repair section-wrapper">
+        <div class="types-repair__title">
+          <h2>TYPES OF REPAIR</h2>
+          <div class="section__title-icon"></div>
+        </div>
+        <div class="types-repair__gallery">
+          <div class="col">
+            <img src="./assets/img/types-repair-img-1.png" alt="types-repair-img-1">
+            <div class="col__txt-block">
+              <h3>Redecorating</h3>
+              <ul>
+                <li><span></span>Dismantling of old coatings</li>
+                <li><span></span>Wallpapering</li>
+                <li><span></span>Painting walls and ceilings</li>
+                <li><span></span>Laying flooring</li>
+                <li><span></span>Replacing plumbing</li>
+                <li><span></span>Replacing sockets and switches</li>
+                <li><span></span>Replacing doors</li>
+              </ul>
+              <button class="col__btn" type="button"><a href="#">from 900 rub / m2</a></button>
+            </div>
           </div>
-          <fieldset class="form__checkbox">
-            <label class="form__checkbox-label" for="agree">
-              <input type="checkbox" id="agree" required>
-              <span class="form__checkmark"></span>
-              I agree to the processing of personal data
-            </label>
-          </fieldset>
-        </form>
+          <div class="col">
+            <img src="./assets/img/types-repair-img-2.png" alt="types-repair-img-2">
+            <div class="col__txt-block">
+              <h3>Overhaul</h3>
+              <ul>
+                <li><span></span>Dismantling of old coatings</li>
+                <li><span></span>Wallpapering</li>
+                <li><span></span>Painting walls and ceilings</li>
+                <li><span></span>Laying flooring</li>
+                <li><span></span>Replacing plumbing</li>
+                <li><span></span>Replacing sockets and switches</li>
+                <li><span></span>Replacing doors</li>
+              </ul>
+              <button class="col__btn" type="button"><a href="#">from 1800 rub / m2</a></button>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./assets/img/types-repair-img-3.png" alt="types-repair-img-3">
+            <div class="col__txt-block">
+              <h3>Designer Repair</h3>
+              <ul>
+                <li><span></span>Dismantling of old coatings</li>
+                <li><span></span>Wallpapering</li>
+                <li><span></span>Painting walls and ceilings</li>
+                <li><span></span>Laying flooring</li>
+                <li><span></span>Replacing plumbing</li>
+                <li><span></span>Replacing sockets and switches</li>
+                <li><span></span>Replacing doors</li>
+              </ul>
+              <button class="col__btn" type="button"><a href="#">from 4000 rub / m2</a></button>
+            </div>
+          </div>
+        </div>
+        <div class="types-repair__request">
+          <div class="types-repair__bullets-wrapper">
+            <div class="types-repair__bullets-round"></div>
+            <div class="types-repair__bullets-tips">
+              <ul>
+                <li><span></span>Our specialist will arrive for measurements per day contact, or appoint a date convenient for you</li>
+                <li><span></span>Free metering</li>
+                <li><span></span>Free consultation</li>
+                <li><span></span>Get a cost estimate and the timing of your future repairs</li>
+              </ul>
+            </div>
+          </div>
+          <div class="types-repair__form">
+            <p>Leave a request for free<br>departure of the measurer</p>
+            <form class="form__types-repair">
+              <div class="form__display">
+                <fieldset class="form__main-group">
+                  <label for="name">Name</label>
+                  <input type="text" id="name" placeholder="What is your name:">
+                </fieldset>
+                <fieldset class="form__main-group">
+                  <label for="phone">Phone</label>
+                  <input type="number" id="phone" placeholder="Your phone number:">
+                </fieldset>
+              </div>
+              <fieldset class="form__checkbox">
+                <label class="form__checkbox-label" for="agree">
+                  <input type="checkbox" id="agree" checked required>
+                  <span class="form__checkmark"></span>
+                  I agree to the processing of personal data
+                </label>
+              </fieldset>
+              <button type="submit">Submit</button>
+            </form>
+          </div>
+        </div>
       </section>
     </main>
   </div>
