feat: 'types-repair' section is done

--- a/index.html
+++ b/index.html
@@ -218,20 +218,26 @@
               <div class="types-repair__bullets-round">
                 <div></div>
               </div>
-            </div>
-            <div class="types-repair__bullets-tips">
-              <ul>
-                <li><span></span>Our specialist will arrive for measurements per day contact, or appoint a date
-                  convenient for you</li>
-                <li><span></span>Free metering</li>
-                <li><span></span>Free consultation</li>
-                <li><span></span>Get a cost estimate and the timing of your future repairs</li>
+              <ul class="bullets-tips">
+                <li class="bullets-tips__one">
+                  <div>01</div>Our specialist will arrive for measurements per day<br> contact, or appoint a date
+                  convenient for you
+                </li>
+                <li class="bullets-tips__two">
+                  <div>02</div>Free metering
+                </li>
+                <li class="bullets-tips__three">
+                  <div>03</div>Free consultation
+                </li>
+                <li class="bullets-tips__four">
+                  <div>04</div>Get a cost estimate and<br> the timing of your future repairs
+                </li>
               </ul>
             </div>
           </div>
-          <div class="types-repair__form">
-            <p>Leave a request for free<br>departure of the measurer</p>
+          <div class="types-repair__from-wrapper">
             <form class="form form_repair">
+              <p>Leave a request for free<br>departure of the measurer</p>
               <div class="form__display">
                 <fieldset class="form__main-group">
                   <label for="name__types">Name</label>
@@ -243,7 +249,7 @@
                 </fieldset>
                 <fieldset class="form__main-group">
                   <label for="email__types">Email</label>
-                  <input type="email__types" id="email" placeholder="Your email:">
+                  <input type="email" id="email__types" placeholder="Your email:">
                 </fieldset>
               </div>
               <fieldset class="form__checkbox">
@@ -253,8 +259,16 @@
                   I agree to the processing of personal data
                 </label>
               </fieldset>
-              <button type="submit">Submit</button>
+              <div class="vertical-form-btn-wrap">
+                <button type="submit">Submit</button>
+              </div>
             </form>
+            <div class="motive-txt">
+              <div class="motive-txt__icon">
+                <img src="./assets/img/piggy-bank.png" alt="piggy bank">
+              </div>
+              <p>Help save 10&nbsp;&mdash; 20% of&nbsp;the cost<br> of&nbsp;materials</p>
+            </div>
           </div>
         </div>
       </section>
