feat: 'fantasy' section is done

--- a/index.html
+++ b/index.html
@@ -272,6 +272,96 @@
           </div>
         </div>
       </section>
+      <section class="fantasy">
+        <div class="section-wrapper">
+          <div class="fantasy__left-block">
+            <h2>We realize your<br> wildest fantasies</h2>
+            <ul class="def-list">
+              <li class="def-list__item def-list__item_active"><span>American classic</span></li>
+              <li class="def-list__item"><span>Empire</span></li>
+              <li class="def-list__item"><span>Classical</span></li>
+              <li class="def-list__item"><span>Loft</span></li>
+              <li class="def-list__item"><span>Minimalism</span></li>
+              <li class="def-list__item"><span>Provence</span></li>
+              <li class="def-list__item"><span>Romanticism</span></li>
+              <li class="def-list__item"><span>Scandinavian style</span></li>
+              <li class="def-list__item"><span>Mediterranean style</span></li>
+              <li class="def-list__item"><span>High tech</span></li>
+              <li class="def-list__item"><span>Eclecticism</span></li>
+            </ul>
+          </div>
+          <div class="fantasy__gallery">
+            <div class="fantasy__gallery-block">
+              <img class="fantasy__gallery-img1" src="./assets/img/style-1.png" alt="Empire"><img
+                class="fantasy__gallery-img2" src="./assets/img/style-2.png" alt="Classical">
+            </div>
+            <div class="fantasy__gallery-block">
+              <img class="fantasy__gallery-img3" src="./assets/img/style-3.png" alt="Loft"><img
+                class="fantasy__gallery-img4" src="./assets/img/style-4.png" alt="Minimalism">
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="design-project section-wrapper">
+        <div class="design-project__title">
+          <h2>design project</h2>
+          <div class="section__title-icon"></div>
+        </div>
+        <p class="design-project__txt">Design project not only helps to make the repair of your apartment more
+          modern,<br>
+          but also significantly reduces the cost of materials and reduces the time of repair work.
+        </p>
+        <div class="design-project__gallery">
+          <div class="col">
+            <img src="./assets/img/types-repair-img-1.png" alt="types-repair-img-1">
+            <div class="col__txt-block">
+              <h3>Redecorating</h3>
+              <ul>
+                <li><span></span>Dismantling of old coatings</li>
+                <li><span></span>Wallpapering</li>
+                <li><span></span>Painting walls and ceilings</li>
+                <li><span></span>Laying flooring</li>
+                <li><span></span>Replacing plumbing</li>
+                <li><span></span>Replacing sockets and switches</li>
+                <li><span></span>Replacing doors</li>
+              </ul>
+              <button class="col__btn" type="button"><a href="#">from 900 rub / m2</a></button>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./assets/img/types-repair-img-2.png" alt="types-repair-img-2">
+            <div class="col__txt-block">
+              <h3>Overhaul</h3>
+              <ul>
+                <li><span></span>Dismantling of old coatings</li>
+                <li><span></span>Wallpapering</li>
+                <li><span></span>Painting walls and ceilings</li>
+                <li><span></span>Laying flooring</li>
+                <li><span></span>Replacing plumbing</li>
+                <li><span></span>Replacing sockets and switches</li>
+                <li><span></span>Replacing doors</li>
+              </ul>
+              <button class="col__btn" type="button"><a href="#">from 1800 rub / m2</a></button>
+            </div>
+          </div>
+          <div class="col">
+            <img src="./assets/img/types-repair-img-3.png" alt="types-repair-img-3">
+            <div class="col__txt-block">
+              <h3>Designer Repair</h3>
+              <ul>
+                <li><span></span>Dismantling of old coatings</li>
+                <li><span></span>Wallpapering</li>
+                <li><span></span>Painting walls and ceilings</li>
+                <li><span></span>Laying flooring</li>
+                <li><span></span>Replacing plumbing</li>
+                <li><span></span>Replacing sockets and switches</li>
+                <li><span></span>Replacing doors</li>
+              </ul>
+              <button class="col__btn" type="button"><a href="#">from 4000 rub / m2</a></button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </div>
 
